<resources>
    <string name="app_name">FruktoLand</string>
    <string name="title_home">Каталог</string>
    <string name="title_basket">Корзина</string>
    <string name="fruits">Фрукты, Всегда свежие</string>
    <string name="fruits_description">Всегда свежие</string>
    <string name="vegetables">Овощи</string>
    <string name="vegetables_description">Только что с грядки</string>
    <string name="berries">Ягоды</string>
    <string name="berries_description">Полно витаминов</string>
    <string name="salads">Салаты, грибы</string>
    <string name="salads_description">Вечно зеленые</string>
    <string name="meat">Мясо</string>
    <string name="meat_description">Тут костей нет</string>
    <string name="nuts">Сухофрукты</string>
    <string name="nuts_description">Разнообразие витаминов</string>
    <string name="others">Прочее</string>
    <string name="others_description">Молоко, масло и пр.</string>
    <string name="title_goods">Товары</string>
    <string name="order_send_success">Мы приняли ваш заказ. Спасибо</string>
    <string name="order_send_error">Ошибка получения заказа. Попробуйте еще раз пожалуйста</string>
    <string name="title_total">Сумма:</string>
    <string name="title_price">Цена:</string>
</resources>