<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.view.MainFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/homeMainLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@color/main_white"
            android:orientation="vertical"
            android:padding="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <com.fruktoland.app.ui.elements.HomeViewItem
                    android:id="@+id/fruitsItem"
                    app:cardElevation="0dp"
                    android:layout_width="@dimen/home_item_width"
                    android:layout_height="@dimen/home_item_height"
                    app:imageIcon="@drawable/ic_apple"
                    app:imageIconBackground="@drawable/cercle_background_yellow"
                    app:imageText="@string/fruits"
                    app:imageTextDescription="@string/fruits_description" />

                <com.fruktoland.app.ui.elements.HomeViewItem
                    android:id="@+id/vegetablesItem"
                    app:cardElevation="0dp"
                    android:layout_width="@dimen/home_item_width"
                    android:layout_height="@dimen/home_item_height"
                    app:imageIcon="@drawable/ic_carrot"
                    app:imageIconBackground="@drawable/cercle_background_blue"
                    app:imageText="@string/vegetables"
                    app:imageTextDescription="@string/vegetables_description" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipToPadding="false"
                android:gravity="center"
                android:orientation="horizontal">

                <com.fruktoland.app.ui.elements.HomeViewItem
                    android:id="@+id/berriesItem"
                    app:cardElevation="0dp"
                    android:layout_width="@dimen/home_item_width"
                    android:layout_height="@dimen/home_item_height"
                    android:padding="10dp"
                    app:imageIcon="@drawable/ic_cherry"
                    app:imageIconBackground="@drawable/cercle_background_red"
                    app:imageText="@string/berries"
                    app:imageTextDescription="@string/berries_description" />

                <com.fruktoland.app.ui.elements.HomeViewItem
                    android:id="@+id/saladsItem"
                    app:cardElevation="0dp"
                    android:layout_width="@dimen/home_item_width"
                    android:layout_height="@dimen/home_item_height"
                    android:padding="10dp"
                    app:imageIcon="@drawable/ic_salads"
                    app:imageIconBackground="@drawable/cercle_background_purple"
                    app:imageText="@string/salads"
                    app:imageTextDescription="@string/salads_description" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipToPadding="false"
                android:gravity="center"
                android:orientation="horizontal">

                <com.fruktoland.app.ui.elements.HomeViewItem
                    android:id="@+id/meatItem"
                    android:layout_width="@dimen/home_item_width"
                    android:layout_height="@dimen/home_item_height"
                    android:padding="10dp"
                    app:cardElevation="0dp"
                    app:imageIcon="@drawable/ic_meat"
                    app:imageIconBackground="@drawable/cercle_background_pink"
                    app:imageText="@string/meat"
                    app:imageTextDescription="@string/meat_description" />

                <com.fruktoland.app.ui.elements.HomeViewItem
                    android:id="@+id/nutsItem"
                    android:layout_width="@dimen/home_item_width"
                    android:layout_height="@dimen/home_item_height"
                    android:padding="10dp"
                    app:cardElevation="0dp"
                    app:imageIcon="@drawable/ic_nuts"
                    app:imageIconBackground="@drawable/cercle_background_brown"
                    app:imageText="@string/nuts"
                    app:imageTextDescription="@string/nuts_description" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipToPadding="false"
                android:gravity="center"
                android:orientation="horizontal">
                <com.fruktoland.app.ui.elements.HomeViewItem
                    android:id="@+id/othersItem"
                    android:layout_width="180dp"
                    android:layout_height="220dp"
                    android:padding="10dp"
                    app:cardElevation="0dp"
                    app:imageIcon="@drawable/ic_paper_bag"
                    app:imageIconBackground="@drawable/cercle_background_gray"
                    app:imageText="@string/others"
                    app:imageTextDescription="@string/others_description" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>